typescript/checker/tests/conformance/es6/Symbols/symbolType13.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            24,
        ),
        hi: BytePos(
            30,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType13.ts:2:9
  |
2 | var s = Symbol();
  |         ^^^^^^

